# dead-letter

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Launch Dead Letter.command  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-refresh.yml  docs-link-check.yml  release.yml
docs/: README.md
docs/brand/: style-guide.md
docs/reference/: frontend-state-model.md  quality-diagnostics.md  v4-runtime-contracts.md
scripts/: launch-dead-letter-ui.sh
src/dead_letter/: __init__.py
src/dead_letter/backend/: __init__.py  api.py  cli.py  doctor.py  filesystem.py  (+6 more)
tests/backend/: test_api_routes.py  test_batch_cleanup.py  test_cli.py  test_contract_parity.py  test_docs_link_check_workflow.py  test_doctor.py  test_filesystem.py  test_import_api.py  test_import_batch_api.py  test_ingestion_api.py  test_ingestion_integration.py  test_job_api_workflow.py  test_job_manager_cabinet.py  test_jobs.py  test_launcher_scripts.py  test_mcp_server.py  test_report_integration.py  test_schemas_image_filter.py  test_settings_api.py  test_ui_server.py  test_watch.py  test_watch_batch_filter.py  test_watch_workflow.py
tests/core/: conftest.py  test_api.py  test_attachments.py  test_bundles.py  test_calendar.py  test_header_parser.py  test_html.py  test_html_conversation.py  test_image_filter.py  test_mime.py  test_mime_selection.py  test_output_paths.py  test_quality_regressions.py  test_quotes.py  test_render.py  test_report.py  test_sanitize.py  test_schema.py  test_slugs.py  test_text_conversation.py  test_threads.py  test_types.py
tests/frontend/: app.test.js  helpers.test.js  job.test.js  settings.test.js  watch.test.js
(+42 files in other folders)
